fix border radius and element spacing in layout

--- a/packages/maplibre-gl-export/src/scss/maplibre-gl-export.scss
+++ b/packages/maplibre-gl-export/src/scss/maplibre-gl-export.scss
@@ -43,3 +43,40 @@
 	width: 0;
 	position: fixed;
 }
+
+// Layout
+.layout-section-container {	
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	max-width: 50%;
+	width: 3in;
+	min-width: 2in;
+	min-height: 2in;
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-sizing: content-box;
+	overflow: hidden;
+	border: 1px solid rgba(255,255,255,0);
+	border-style: hidden;
+	border-radius: 12px;
+	border: 3px solid rgba(255,255,255,0);
+
+	section {		
+		width: 100%;
+		display: inline-flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		font-family: "Inter, Arial, Helvetica, sans-serif";
+		font-weight: 400;
+		background-color: rgba(255,255,255,1) !important;
+		background: rgba(255,255,255,1) !important;
+		box-sizing: content-box;
+		border-radius: 12px;
+		overflow: hidden;
+		border: 3px solid rgba(255,255,255,0);
+	}
+}
